Add a link to a shareware release

--- a/readme.html
+++ b/readme.html
@@ -12,17 +12,26 @@
 <li>Oculus Rift</li>
 </ul>
 
-<h2>Instructions:</h2>
+<h2>Shareware Instructions:</h2>
 
 <ol>
-<li>Download binary package and unzip it to your preferred directory.</li>
+<li>Download the shareware package and unzip it to your preferred directory.</li>
+<li>Optionally download the high resolution texture package and unzip it to the same folder.</li>
+<li>Run <code>kmquake2</code>.</li>
+</ol>
+
+<h2>Full Version Instructions:</h2>
+
+<ol>
+<li>Download binary or shareware package and unzip it to your preferred directory.</li>
 <li>Optionally download the high resolution texture package and unzip it to the same folder.</li>
 <li>Copy the following files from your Quake II <code>baseq2</code> folder into the new <code>baseq2</code> folder:
-<ul><li><code>pak0.pak</code></li>
+<ul><li><code>pak0.pak</code> (overwrite it if you downloaded the shareware version)</li>
 <li><code>pak1.pak</code></li>
 <li><code>pak2.pak</code></li>
 <li><code>maps.lst</code></li>
-<li><code>videos\</code> (optional - only if you want cinematics)</li></ul></li>
+<li><code>videos\</code> (optional - only if you want cinematics)</li>
+<li><code>players\</code> (optional - only if you want to play multiplayer. overwrite it if you downloaded the shareware version)</li></ul></li>
 <li>If you have the CD audio soundtrack in .ogg format you can optionally place these files in <code>baseq2\music\</code>. Music files need to be named <code>track02.ogg</code> to <code>track11.ogg</code>.</li>
 <li>Run <code>kmquake2</code>. </li>
 </ol>
