--- a/readme.html
+++ b/readme.html
@@ -1,4 +1,4 @@
-<h1>Quake II for Oculus Rift v1.2</h1>
+<h1>Quake II VR v1.2</h1>
 
 <p>This is a Quake II engine mod to add full support for the Oculus Rift. </p>
 
