--- a/readme.html
+++ b/readme.html
@@ -1,4 +1,4 @@
-<h1>Quake II VR v1.3</h1>
+<h1>Quake II VR v1.3.1</h1>
 
 <p>This is a Quake II engine mod to add full support for Virtual Reality HMD's such as the Oculus Rift.</p>
 
@@ -67,7 +67,7 @@
 <li>Knightmare and <a href="http://www.markshan.com/knightmare/">KMQuake II</a>. The general cleanliness of the code base and significant graphical upgrades responsible for this turning out as well as it did.</li>
 <li><a href="https://github.com/phoboslab">Dominic Szablewski</a> and <a href="https://github.com/swax">John Marshall</a> for their work on RiftQuake. It served as the basis for this project, and in some places their code remains.</li>
 <li>Jim Waurzyniak for taking the time and effort to host a collection of high-resolution assets for Quake II.</li>
-<li><a href="http://islaes.com/">Isla S.</a> for the idea of applying counter-rotation to the HUD to help reduce nausea.</li>
+<li><a href="http://islaes.com/">Isla Schanuel</a> for the idea of applying counter-rotation to the HUD to help reduce nausea.</li>
 <li>Karl B. for reporting bugs in multiplayer.</li>
 <li><a href="http://enpat.net">Nick Patrick</a> for a truly amazing job finding bugs in pre-release builds.</li>
 </ul>
