--- a/readme.html
+++ b/readme.html
@@ -1,6 +1,6 @@
-<h1>Quake II VR v1.3.1</h1>
+<h1>Quake II VR v1.9.3 Pre-release</h1>
 
-<p>This is a Quake II engine mod to add full support for Virtual Reality HMD's such as the Oculus Rift.</p>
+<p>This is a Quake II engine mod to add native support for Virtual Reality HMD's such as the Oculus Rift.</p>
 
 <p>This mod is based on <a href="http://www.markshan.com/knightmare/">KMQuake II</a> and incorporates work from <a href="https://github.com/phoboslab/Quakespasm-Rift/">RiftQuake</a>.</p>
 
@@ -9,7 +9,7 @@
 <ul>
 <li>Full version of <a href="http://store.steampowered.com/app/2320/">Quake II</a></li>
 <li>Windows XP or higher</li>
-<li>Oculus Rift</li>
+<li>Oculus Rift or any SteamVR supported HMD</li>
 <li>Pretty much any video card that supports DirectX 9 or higher</li>
 </ul>
 
@@ -20,7 +20,7 @@
 <ol>
 <li>Download the shareware package and unzip it to your preferred directory.</li>
 <li>Optionally download the high resolution texture package and unzip it to the same folder.</li>
-<li>Run <code>kmquake2</code>.</li>
+<li>Run <code>quake2vr</code>.</li>
 </ol>
 
 <h4>Full Version Instructions</h4>
@@ -33,10 +33,10 @@
 <li><code>players\</code> (optional - only if you want to play multiplayer. overwrite it if you downloaded the shareware version)</li>
 <li><code>videos\</code> (optional - only if you want cinematics)</li></ul></li>
 <li>If you have the CD audio soundtrack in .ogg format you can optionally place these files in <code>baseq2\music\</code>. Music files need to be named <code>track02.ogg</code> to <code>track11.ogg</code>.</li>
-<li>Run <code>kmquake2</code> or choose one of the links provided in the extras pack. </li>
+<li>Run <code>quake2vr</code> or choose one of the links provided in the extras pack. </li>
 </ol>
 
-<p>You can alternately just copy the contents of the extracted <code>Quake2-Rift</code> directory on top of an existing Quake II installation, however there is always the risk that this breaks the original installation.</p>
+<p>You can alternately just copy the contents of the extracted <code>Quake2VR</code> directory on top of an existing Quake II installation, however there is always the risk that this breaks the original installation.</p>
 
 <p>If your Oculus Rift is connected and powered on it will enable support automatically at launch, but you can also enable Rift support by accessing the console using ~ and entering <code>vr_enable</code>. When it initializes it will attempt to locate the display that the Rift is configured as and use it, but if that fails it will default to the primary monitor.</p>
 
@@ -51,11 +51,11 @@
 <h2>More Info</h2>
 
 <ul>
-<li><a href="https://github.com/dghost/Quake2VR/">Project Homepage</a></li>
-<li><a href="https://github.com/dghost/Quake2VR/releases">Latest Releases</a></li>
-<li><a href="https://github.com/dghost/Quake2VR/wiki/Changelog">Release Notes</a></li>
-<li><a href="https://github.com/dghost/Quake2VR/wiki/FAQs">FAQs</a></li>
-<li><a href="https://github.com/dghost/Quake2VR/issues">Bug Tracker</a></li>
+<li><a href="https://github.com/q2vr/Quake2VR/">Project Homepage</a></li>
+<li><a href="https://github.com/q2vr/Quake2VR/releases">Latest Releases</a></li>
+<li><a href="https://github.com/q2vr/Quake2VR/wiki/Changelog">Release Notes</a></li>
+<li><a href="https://github.com/q2vr/Quake2VR/wiki/FAQs">FAQs</a></li>
+<li><a href="https://github.com/q2vr/Quake2VR/issues">Bug Tracker</a></li>
 </ul>
 
 <h2>Acknowledgements</h2>
